Now using "normal" structure for unit tests. Added tests for the cast methods.